<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:isScrollContainer="true"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/start_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        android:overScrollMode="ifContentScrolls"
        android:visibility="visible"
        tools:context=".HomeActivity">

        <View
            android:id="@+id/view5"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="62dp"
            android:background="@color/gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_access_point" />

        <TextView
            android:id="@+id/tv_ip_label2"
            android:layout_width="0dp"
            android:layout_height="31dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            android:paddingHorizontal="8dp"
            android:paddingLeft="8dp"
            android:paddingStart="8dp"
            android:text="@string/title_access_point"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view4" />

        <TextView
            android:id="@+id/tv_access_point"
            android:layout_width="0dp"
            android:layout_height="28dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:text="Accespoint Name"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_ip_label2" />

        <View
            android:id="@+id/view3"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/gray"
            app:layout_constraintBottom_toTopOf="@+id/tv_ip_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_port" />

        <TextView
            android:id="@+id/tv_ip_label"
            android:layout_width="0dp"
            android:layout_height="31dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            android:paddingHorizontal="8dp"
            android:paddingLeft="8dp"
            android:text="@string/ip_address"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_ip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_port" />

        <TextView
            android:id="@+id/title_switch"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:paddingStart="8dp"
            android:text="Remote Control"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Switch
            android:id="@+id/switch_toggle_service"
            android:layout_width="0dp"
            android:layout_height="41dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:cursorVisible="false"
            android:paddingLeft="8dp"
            android:textColor="@color/colorAccent"
            android:textOff="Service is OFF."
            android:textOn="@string/service_is_on"
            android:textSize="16sp"
            android:theme="@style/themeSwitch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_switch" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/gray"
            app:layout_constraintBottom_toTopOf="@+id/tv_title_auto_start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch_toggle_service" />

        <TextView
            android:id="@+id/tv_title_auto_start"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:text="Auto Start"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/switch_toggle_auto_start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch_toggle_service"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <Switch
            android:id="@+id/switch_toggle_auto_start"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:cursorVisible="false"
            android:paddingLeft="8dp"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:theme="@style/themeSwitch"
            app:layout_constraintBottom_toTopOf="@+id/tv_settings_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_auto_start" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/gray"
            app:layout_constraintBottom_toTopOf="@+id/tv_settings_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch_toggle_auto_start" />

        <TextView
            android:id="@+id/tv_settings_title"
            android:layout_width="759dp"
            android:layout_height="36dp"
            android:background="@color/secondary"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:paddingStart="8dp"
            android:text="@string/title_communication_settings"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:translationX="0dp"
            app:layout_constraintBottom_toTopOf="@+id/password_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch_toggle_auto_start" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/gray"
            app:layout_constraintBottom_toTopOf="@+id/password_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_settings_title" />

        <TextView
            android:id="@+id/password_label"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:focusable="true"
            android:gravity="center_vertical"
            android:paddingHorizontal="8dp"
            android:paddingLeft="8dp"
            android:text="@string/set_password"
            android:textColor="@color/colorAccent"
            android:textColorHighlight="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/et_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_settings_title"
            app:layout_constraintVertical_bias="0.51"
            app:layout_constraintVertical_chainStyle="packed" />


        <EditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword|textVisiblePassword"
            android:padding="8dp"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_port_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_label" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/gray"
            app:layout_constraintBottom_toTopOf="@+id/tv_port_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password" />

        <TextView
            android:id="@+id/tv_port_label"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            android:paddingHorizontal="8dp"
            android:paddingLeft="8dp"
            android:text="@string/set_port"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/et_port"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password" />

        <EditText
            android:id="@+id/et_port"
            style="@android:style/Widget.AutoCompleteTextView"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:digits="0123456789"
            android:hint="@string/port_hint"
            android:inputType="number"
            android:maxLength="5"
            android:paddingLeft="8dp"
            android:paddingStart="8dp"
            android:singleLine="true"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:textColorLink="@color/colorAccent"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_port_label" />

        <View
            android:id="@+id/view4"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="122dp"
            android:background="@color/gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_ip" />

        <TextView
            android:id="@+id/tv_ip"
            android:layout_width="0dp"
            android:layout_height="28dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:text=""
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_ip_label" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>
